--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,61 +22,70 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="table with supplies and notebook in the center with SEO components drawn out" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="laptop on table with reputation chart onscreen trending upwards" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="table of people full of symbols representing various forms and methods of social media" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lightbulb frame with gears for the top, funnel with a down-arrow for the body and '$' for the base" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="upperbody icon with a lightbulb for a head, with signal waves surrounding it" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="a large gear wtih 3 coins, all with '$' signs on them" ></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-    <div class="footer">
+        </nav>
+    </header>
+    
+    <main>
+        <section>
+            <div class="hero"></div>
+            <div class="content">
+                <div class="search-engine-optimization">
+                    <img src="./assets/images/search-engine-optimization.jpg" alt="table with supplies and notebook in the center with SEO components drawn out" class="float-left" />
+                    <h2>Search Engine Optimization</h2>
+                    <p>
+                        The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                    </p>
+                </div>
+                <div id="online-reputation-management" class="online-reputation-management">
+                    <img src="./assets/images/online-reputation-management.jpg" alt="laptop on table with reputation chart onscreen trending upwards" class="float-right" />
+                    <h2>Online Reputation Management</h2>
+                    <p>
+                        The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                    </p>
+                </div>
+                <div id="social-media-marketing" class="social-media-marketing">
+                    <img src="./assets/images/social-media-marketing.jpg" alt="table of people full of symbols representing various forms and methods of social media" class="float-left" />
+                    <h2>Social Media Marketing</h2>
+                    <p>
+                        Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="benefits">
+                <div class="benefit-lead">
+                    <h3>Lead Generation</h3>
+                    <img src="./assets/images/lead-generation.png" alt="lightbulb frame with gears for the top, funnel with a down-arrow for the body and '$' for the base" />
+                    <p>
+                        Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                    </p>
+                </div>
+                <div class="benefit-brand">
+                    <h3>Brand Awareness</h3>
+                    <img src="./assets/images/brand-awareness.png" alt="upperbody icon with a lightbulb for a head, with signal waves surrounding it" />
+                    <p>
+                        Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                    </p>
+                </div>
+                <div class="benefit-cost">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" alt="a large gear wtih 3 coins, all with '$' signs on them" ></img>
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
