fixed navigation and right column alignments

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,7 +22,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
+        </div>
     </header>
     
     <main>
@@ -51,9 +51,6 @@
                     </p>
                 </div>
             </div>
-        </section>
-
-        <section>
             <div class="benefits">
                 <div class="benefit-lead">
                     <h3>Lead Generation</h3>
@@ -79,7 +76,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
